syntax = "proto3";

package message;

message GetVerifyCodeReq {
    string email = 1;
}

message GetVerifyCodeRsp {
    int32 error = 1;
    string email = 2;
    string code = 3;
}

service GetVerifyCodeService {
    rpc getVerifyCode (GetVerifyCodeReq) returns (GetVerifyCodeRsp) { }
}
